--- a/Workshop Week 2.ipynb
+++ b/Workshop Week 2.ipynb
@@ -27,18 +27,74 @@
     "\n",
     "Complete this section as per the instructions in the iLearn practical page.  Add the required cells below this one.\n",
     "\n",
-    "##Heading level 2 "
+    "## Heading level 2 "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Heading level 1\n",
-    "##Heading level 2\n",
-    "###Heading level 3"
+    "# Heading level 1\n",
+    "## Heading level 2\n",
+    "### Heading level 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>This is the first line.<br>\n",
+    "And this is the second line.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**bold text**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*bold text*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***really important***."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. First item\n",
+    "2. Second item\n",
+    "3. Third item\n",
+    "4. Fourth item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- First item\n",
+    "- Second item\n",
+    "- Third item\n",
+    "    - Indented item\n",
+    "    - Indented item\n",
+    "- Fourth item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\sqrt{3x-1}+(1+x)^2$"
    ]
   },
   {
