--- a/Portfolio_1_questions.ipynb
+++ b/Portfolio_1_questions.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7c999798",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "2f27c5a6",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "[20000 rows x 11 columns]>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "bbadd072",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,256 +163,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "88345942",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>userId</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>review</th>\n",
-       "      <th>item</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>helpfulness</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>category</th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>item_price</th>\n",
-       "      <th>user_city</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4051</td>\n",
-       "      <td>12807</td>\n",
-       "      <td>Great job for what it is!</td>\n",
-       "      <td>eBay</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Online Stores &amp; Services</td>\n",
-       "      <td>88</td>\n",
-       "      <td>149.00</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4052</td>\n",
-       "      <td>122899</td>\n",
-       "      <td>Free Access Worth your Time</td>\n",
-       "      <td>NetZero</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Online Stores &amp; Services</td>\n",
-       "      <td>46</td>\n",
-       "      <td>53.00</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>33</td>\n",
-       "      <td>12700</td>\n",
-       "      <td>AOL..I love you!!!!!!!!!!!!</td>\n",
-       "      <td>AOL (America Online)</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Online Stores &amp; Services</td>\n",
-       "      <td>0</td>\n",
-       "      <td>145.84</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>33</td>\n",
-       "      <td>21000</td>\n",
-       "      <td>EBAY!!!  I LOVE YOU!!!! :-)*</td>\n",
-       "      <td>eBay</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Online Stores &amp; Services</td>\n",
-       "      <td>88</td>\n",
-       "      <td>149.00</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>33</td>\n",
-       "      <td>22300</td>\n",
-       "      <td>Blair Witch...Oh Come On.......</td>\n",
-       "      <td>Blair Witch Project</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Movies</td>\n",
-       "      <td>12</td>\n",
-       "      <td>44.00</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>4083</td>\n",
-       "      <td>92100</td>\n",
-       "      <td>I'd Play it again</td>\n",
-       "      <td>Final Fantasy VIII for PlayStation 1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Games</td>\n",
-       "      <td>27</td>\n",
-       "      <td>136.05</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>4083</td>\n",
-       "      <td>92100</td>\n",
-       "      <td>A great time to get it!</td>\n",
-       "      <td>Final Fantasy VIII for PlayStation 1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Games</td>\n",
-       "      <td>27</td>\n",
-       "      <td>136.05</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>4083</td>\n",
-       "      <td>92200</td>\n",
-       "      <td>You don't have to have seen them!</td>\n",
-       "      <td>Scary Movie</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Movies</td>\n",
-       "      <td>60</td>\n",
-       "      <td>53.00</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>4083</td>\n",
-       "      <td>92200</td>\n",
-       "      <td>Movie is 'OK'. Little like The Ice Storm</td>\n",
-       "      <td>American Beauty</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Movies</td>\n",
-       "      <td>5</td>\n",
-       "      <td>59.00</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>4083</td>\n",
-       "      <td>92600</td>\n",
-       "      <td>Eat like a King for $5</td>\n",
-       "      <td>Taco Bell</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Restaurants &amp; Gourmet</td>\n",
-       "      <td>74</td>\n",
-       "      <td>108.30</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 11 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    userId  timestamp                                    review  \\\n",
-       "0     4051      12807                 Great job for what it is!   \n",
-       "1     4052     122899               Free Access Worth your Time   \n",
-       "2       33      12700             AOL..I love you!!!!!!!!!!!!     \n",
-       "3       33      21000              EBAY!!!  I LOVE YOU!!!! :-)*   \n",
-       "4       33      22300           Blair Witch...Oh Come On.......   \n",
-       "..     ...        ...                                       ...   \n",
-       "95    4083      92100                         I'd Play it again   \n",
-       "96    4083      92100                   A great time to get it!   \n",
-       "97    4083      92200         You don't have to have seen them!   \n",
-       "98    4083      92200  Movie is 'OK'. Little like The Ice Storm   \n",
-       "99    4083      92600                    Eat like a King for $5   \n",
-       "\n",
-       "                                    item  rating  helpfulness gender  \\\n",
-       "0                                   eBay     5.0          2.0      F   \n",
-       "1                                NetZero     5.0          0.0      F   \n",
-       "2                   AOL (America Online)     5.0          4.0      F   \n",
-       "3                                   eBay     5.0          4.0      F   \n",
-       "4                    Blair Witch Project     1.0          4.0      F   \n",
-       "..                                   ...     ...          ...    ...   \n",
-       "95  Final Fantasy VIII for PlayStation 1     5.0          4.0      F   \n",
-       "96  Final Fantasy VIII for PlayStation 1     5.0          0.0    NaN   \n",
-       "97                           Scary Movie     4.0          3.0      F   \n",
-       "98                       American Beauty     4.0          3.0      F   \n",
-       "99                             Taco Bell     4.0          0.0      F   \n",
-       "\n",
-       "                    category  item_id  item_price  user_city  \n",
-       "0   Online Stores & Services       88      149.00         39  \n",
-       "1   Online Stores & Services       46       53.00         39  \n",
-       "2   Online Stores & Services        0      145.84         31  \n",
-       "3   Online Stores & Services       88      149.00         31  \n",
-       "4                     Movies       12       44.00         31  \n",
-       "..                       ...      ...         ...        ...  \n",
-       "95                     Games       27      136.05         17  \n",
-       "96                     Games       27      136.05         17  \n",
-       "97                    Movies       60       53.00         17  \n",
-       "98                    Movies        5       59.00         17  \n",
-       "99     Restaurants & Gourmet       74      108.30         17  \n",
-       "\n",
-       "[100 rows x 11 columns]"
+       "userId         0\n",
+       "timestamp      0\n",
+       "review         0\n",
+       "item           0\n",
+       "rating         0\n",
+       "helpfulness    0\n",
+       "gender         0\n",
+       "category       0\n",
+       "item_id        0\n",
+       "item_price     0\n",
+       "user_city      0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "orignal_df.head(100)"
+    "df1=orignal_df.dropna()\n",
+    "df1.isnull().sum()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8313ae1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n",
+      "none\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in df1['review'] :\n",
+    "    if x=='none':\n",
+    "      print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "68ccf4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "userId         0\n",
+       "timestamp      0\n",
+       "review         0\n",
+       "item           0\n",
+       "rating         0\n",
+       "helpfulness    0\n",
+       "gender         0\n",
+       "category       0\n",
+       "item_id        0\n",
+       "item_price     0\n",
+       "user_city      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2=df1.drop(index=df1[df1['review']=='none'].index)\n",
+    "for x in df2['review'] :\n",
+    "    if x=='none':\n",
+    "      print(x)\n",
+    "df2.isnull().sum()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3aa343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23201cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -431,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1de6b96c",
    "metadata": {},
    "outputs": [],
@@ -453,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "af401cf2",
    "metadata": {},
    "outputs": [],
@@ -479,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "727182dd",
    "metadata": {},
    "outputs": [],
